--- a/public/tex/CV_SangjunSon.tex
+++ b/public/tex/CV_SangjunSon.tex
@@ -16,10 +16,11 @@
 \newcommand{\tab}[1]{\hspace{.2667\textwidth}\rlap{#1}}
 \newcommand{\itab}[1]{\hspace{0em}\rlap{#1}}
 \name{Sangjun Son} % Your name
+
 \address{1, Gwanak-ro, Gwanak-gu, Seoul, Republic of Korea, 08826}
-  
-\address{\Letter{} lucetre@snu.ac.kr \space \space \faPhone{} (+82)10-3831-0094
+\address{\Letter{} lucetre@snu.ac.kr \space \space \faPhone{} +82 10 3831 0094
 \space \space \faGithub{} \href{https://lucetre.github.io/about}{lucetre.github.io}} 
+\address{\large\texttt{lucetre}}
 
 \begin{document}
 \setlist[itemize,1]{leftmargin=\dimexpr 26pt-2mm}
@@ -36,98 +37,98 @@
 %    \item Machine Learning: Interpretable learning, spatiotemporal learning, time-series, bioinformatics 
 %\end{itemize}
 %My research interests focuses on {\bf Big Data Mining} and {\bf Interpretable Machine Learning} dealing with data having special structures, such as multi-aspect data, time series, spatiotemporal data, and biological data. 
-Tensor Analysis, Machine Learning, Data Mining, 
+Machine Learning, Data Mining, Tensor Analysis
 \end{rSection}
 %
 \begin{rSection}{EDUCATION}
-{\bf Seoul National University}, Seoul, Republic of Korea \hfill Mar. 2016 - Present \\
-Candidate for \textit{B.S} in Computer Science and Engineering \\
+{\bf Seoul National University}, \textit{Seoul, Republic of Korea} \hfill Mar. 2016 - Present \\
+Candidate for B.S. in Computer Science and Engineering \\
 Interdisciplinary Major in Entrepreneurship
-% GPA: Overall {\bf0.00/4.50} \\
-%, Major {\bf0.00/4.50}
 
-{\bf Daegu Science High School}, Daegu, Republic of Korea \hfill Mar. 2013 - Feb. 2016
+{\bf Daegu Science High School}, \textit{Daegu, Republic of Korea} \hfill Mar. 2013 - Feb. 2016
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	PREPRINTS   SECTION
 %----------------------------------------------------------------------------------------
 \begin{rSection}{PUBLICATIONS}
-Dawon Ahn, \textbf{Sangjun Son}, and U Kang, 
+Dawon Ahn, \textbf{Sangjun Son}, and U Kang, \\
 	``\href{https://dl.acm.org/doi/abs/10.1145/3340531.3417413}
-	{Gtensor: Fast and Accurate Tensor Analysis System using GPUs}", \\
-	29th ACM International Conference on 
-	Information and Knowledge Management (CIKM) 2020, Virtual Event, Ireland
+	{\textbf{Gtensor: Fast and Accurate Tensor Analysis System using GPUs}}," \\
+	\textit{29th ACM International Conference on 
+	Information and Knowledge Management (CIKM) 2020}, Virtual Event, Ireland
+	
+\textbf{Sangjun Son}*, Yongchan Park*, Minyong Cho, and U Kang, \\ 
+	``\href{https://datalab.snu.ac.kr/dao-cp/}
+	{\textbf{DAO-CP: Data-adaptive online CP decomposition}}," 
+    \textit{make publicly available}, (* Both authors contributed equally to this work)
 \end{rSection}
 
 %--------------------------------------------------------------------------------
 %    RESEARCH EXPERIENCES
 %--------------------------------------------------------------------------------
-
 \begin{rSection}{RESEARCH EXPERIENCES}
-\href{https://datalab.snu.ac.kr/}{\textbf{Data Mining Laboratory}}, Seoul National University \hfill Nov. 2019 - Present \\
-\textit{Research Internship (Advisor: Prof. U Kang)}
+\href{https://datalab.snu.ac.kr/}{\textbf{Data Mining Laboratory}}, \textit{Seoul National University} \hfill Nov. 2019 - Present \\
+Research Internship (Advisor: Prof. U Kang)
 \vspace{-1mm}
 \begin{itemize}
   \item[$\circ$] \textbf{Gtensor}, \textbf{BIGtensor}: Accelerated large-scale tensor analysis on heterogenous system \vspace{-1mm}
   \item[$\circ$] \textbf{DAO-CP}: Enhanced accuracy for CP decomposition of time-evolving tensors by a data-adaptive algorithm
 \end{itemize}
-\href{https://rubis.snu.ac.kr/}{\textbf{Real-Time Ubiquitous Systems Laboratory}}, Seoul National University \hfill Jul. 2017 - Feb. 2018 \\
-\textit{Research Internship (Advisor: Prof. Chang-Gun Lee)}
+\href{https://rubis.snu.ac.kr/}{\textbf{Real-Time Ubiquitous Systems Laboratory}}, \textit{Seoul National University} \hfill Jul. 2017 - Feb. 2018 \\
+Research Internship (Advisor: Prof. Chang-Gun Lee)
 \vspace{-1mm}
 \begin{itemize}
-  \item[$\circ$] Implement simulation to study effects of AED delivery using unmaned vehicle transport technology on defibrillation in out-of-hospital cardiac arrest
+  \item[$\circ$] Implemented simulation to study effects of AED delivery using unmaned vehicle transport technology on defibrillation in out-of-hospital cardiac arrest
 \end{itemize}
 \end{rSection}
 
 %--------------------------------------------------------------------------------
-%    INDUSTRY EXPERIENCES
+%    WORKING EXPERIENCES
 %--------------------------------------------------------------------------------
-
-%\begin{rSection}{INDUSTRY EXPERIENCES}
-%{\bf Data Science Intern} \hfill Sep. 2018 - Dec. 2018 \\ 
-%\textit{DT Lab, HANA Financial Group, Seoul, South Korea} \\
-%Develop restaurants recommender exploiting social networks' tags and credit card usage records
+\begin{rSection}{WORKING EXPERIENCES}
+{\bf Google Software Engineering Intern}, \textit{Google Korea LLC., Desktop Search Team} \hfill Jun. 2021 - Sep. 2021 \\ 
+Automatic I2F and Nesting config generation for hOSRP to diOSRP conversion \\
+Designed an internal development tool for efficient development in OSRP migration \\
+\end{rSection}
 
 %--------------------------------------------------------------------------------
 %    TEACHING EXPERIENCES
 %--------------------------------------------------------------------------------
-
-%\newpage
 \begin{rSection}{TEACHING EXPERIENCES} 
-{\bf International Students Integrated Peer Tutoring Program}, Undergraduate student tutor \hfill Spring. 2021 \\
-\textit{Data Structures \& Algorithm Basic Concepts}, \href{https://dorm.snu.ac.kr/}{SNU Gwanak Residence Halls}
+{\bf International Students Integrated Peer Tutoring Program}, \textit{Undergraduate Student Tutor} \hfill Spring. 2021 \\
+Data Structures \& Algorithm Fundamentals, \href{https://dorm.snu.ac.kr/}{SNU Gwanak Residence Halls}
 
-{\bf Digital Computer Concept and Practice}, Lab class lecturer \hfill Fall. 2020 \\
-\textit{Introduction to Python and Its Application}, \href{https://cse.snu.ac.kr/}{Dept. of Computer Science and Engineering}
+{\bf Digital Computer Concept and Practice}, \textit{Lab Class Lecturer} \hfill Fall. 2020 \\
+Introduction to Python and Its Application, \href{https://cse.snu.ac.kr/}{Dept. of Computer Science and Engineering}
 
-{\bf Basic Computing: First Adventures in Computing}, Teaching assistant \hfill Fall. 2020 \\
-\textit{Python Basics}, \href{https://liberaledu.snu.ac.kr/}{SNU Faculty of Liberal Education}
+{\bf Basic Computing: First Adventures in Computing}, \textit{Teaching Assistant} \hfill Fall. 2020 \\
+Python Basics, \href{https://liberaledu.snu.ac.kr/}{SNU Faculty of Liberal Education}
 
-{\bf Basic Calculus 1}, Undergraduate student tutor \hfill Spring. 2020
+{\bf Basic Calculus 1}, \textit{Undergraduate Student Tutor} \hfill Spring. 2020 \\
+\href{http://www.math.snu.ac.kr/}{TA Office of the Department of Mathematical Sciences}
 \end{rSection}
 
 %--------------------------------------------------------------------------------
 %    SOFTWARE
 %--------------------------------------------------------------------------------
 % \vspace{-1mm}
+\newpage
 \begin{rSection}{SOFTWARE}
 % \vspace{-4mm}
 \href{https://datalab.snu.ac.kr/bigtensor/}{\bf BIGtensor},
-Contributor of \textit{BIGtensor-GPU} and \textit{BIGtensor-Hadoop} \hfill 2019 - 2021 \\ 
-\textit{Tensor mining packages for large-scale tensor analysis }
+\textit{Contributor of BIGtensor-GPU and Hadoop} \hfill Nov. 2019 - Feb. 2021 \\ 
+Tensor mining packages for large-scale tensor analysis
 
-\href{https://github.com/rubis-lab/DroneTransferSimulator/}{\bf Drone Transfer Simulator}  \hfill 2017 - 2018 \\
-\textit{Simulation of AED drone delivery to defibrillation for patients with OHCA}
+\href{https://github.com/rubis-lab/DroneTransferSimulator/}{\bf Drone Transfer Simulator}  \hfill Jul. 2017 - Feb. 2018 \\
+Simulation of AED drone delivery to defibrillation for patients with out-of-hospital cardiac arrest
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	COURSE PROJECTS SECTION
 %----------------------------------------------------------------------------------------
-
-\newpage
 \begin{rSection}{COURSE PROJECTS}
-{\bf Deep learning-based wrinkle detection}, \href{https://morpheus3d.co.kr/}{Morpheus3D} \hfill Fall. 2020\\
+{\bf Deep learning-based wrinkle detection}, \href{https://morpheus3d.co.kr/}{\textit{Morpheus3D}} \hfill Fall. 2020\\
 Built new models to segment wrinkle parts in 3D scanned face images by exploiting state-of-art methods 
 
 {\bf ABC}, \textit{Art with Block-Chain: media-art platform} \hfill Spring. 2020\\
@@ -136,7 +137,7 @@ Implemented smart contract on ERC-721 token, which records its metadata and p5.j
 
 {\bf BusyWrite}, \textit{Team writing solution to accelerate collaboration} \hfill Fall. 2017\\
 Implemented a concept of a unit of thought that users write on, called \textit{Bubble}, 
-and enabled users to write simultaneously and merge after resolving conflicts.
+and enabled users to write simultaneously and merge after resolving conflicts
 
 \end{rSection}
 
@@ -145,22 +146,22 @@ and enabled users to write simultaneously and merge after resolving conflicts.
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{SKILLS}
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Programming Languages \ & C++, Python, Java, MATLAB, Scala, Solidity (Welcome to any languages)\\
+\begin{tabular}{ @{} >{\bfseries}l @{\hspace{5ex}} l }
+Programming Languages \ & C++, Python, Java, MATLAB, Scala, Solidity, R (Welcome to any languages) \\
 %
 Frameworks & PyTorch, Tensorflow, React, AngularJS, Django \\ 
-		   & OpenCL, OpenGL, Hadoop, MFC 
+		   & OpenCL, OpenGL, Hadoop, MFC
 \end{tabular}
 \end{rSection}
 
 
 \begin{rSection}{HONORS and AWARDS}
-{\bf Merit-based Scholarship (full amount)}, Seoul National University \hfill Fall. 2020 - Spring. 2021
+{\bf Merit-based Scholarship (full amount)}, \textit{Seoul National University} \hfill Fall. 2020 - Spring. 2021
 
-{\bf SNU Development Fund Scholarship}, Seoul National University \hfill 2017
+{\bf SNU Development Fund Scholarship}, \textit{Seoul National University} \hfill Spring. 2017 - Fall. 2017
 
-{\bf Korea Olympiad in Informatics}, \textit{National programming contest for high school students} \hfill 2015\\
-Won a silver medal (3rd place)
+{\bf Korea Olympiad in Informatics}, \textit{National Programming Contest for High School Students} \hfill May. 2015\\
+Silver medal (the 3rd place)
 
 \end{rSection}
 
@@ -201,18 +202,28 @@ Won a silver medal (3rd place)
 
 \begin{rSection}{EXTRA-CURRICULAR ACTIVITIES}
 %
+
+{\bf WD Partners}, \textit{Consulting Firm providing indoor ventilation solution} \hfill Jun. 2021 - Now\\
+Theoretically found conditions with the most optimal ventilation efficiency through \\
+CFD (Computerized Fluid Dynamics) analysis for pollutants like (e.g., fine dust and droplets containing viruses) \\
+Built a prototype device using Coanda effect for real-world validation 
+
+{\bf Problem Solving in SNU}, \textit{Study group for preparing problem-solving interview} \hfill Jun. 2021 - Now \\
+Opened weekly practices and workshops to share and learn skills and strategies with each other
+
 {\bf \href{https://decipher.ac/}{Decipher}}, \textit{Blockchain Research Group in Seoul National University} \hfill Mar. 2020 - Aug. 2020\\
 Attended weekly seminars about various blockchain topics as a member of StuDeFi \\
-Designed a donation platform, AID-U for contributing student education expenses
+Designed a donation platform, AID-U for contributing student education expenses 
 
 {\bf \href{http://paiksbeer.com/}{Paik’s Beer}} \hfill Dec. 2019 - Mar. 2020\\
-Served beer and snacks as a part-time job
+Served beer and snacks as a part-time job after school \
 
-{\bf \href{https://www.army.mil.kr/}{Republic of Korea Army}}, \textit{Obligatory Military Service} \hfill Feb. 2018 - Oct. 2019\\
-Discharged on full-term military service
+{\bf \href{https://www.army.mil.kr/}{Republic of Korea Army}}, \textit{Obligatory Military Service} \hfill Feb. 2018 - Oct. 2019 \\
+Discharged on full-term military service \\
+Occupational specialty: administration, communication equipment operation, chaplaincy 
 
 {\bf \href{http://kasttc.kr/}{KASTTC}}, \textit{Table Tennis Club} \hfill Dec. 2016 - Dec. 2017\\
-Conducted lessons to improve the skills of members, managed participating competitions, and supervised weekly training as a club's trainer.
+Conducted lessons to improve the skills of members, managed participating competitions, and supervised weekly training as a club's trainer \
 
 \end{rSection}
 
