--- a/public/tex/CV_SangjunSon.tex
+++ b/public/tex/CV_SangjunSon.tex
@@ -68,7 +68,7 @@ Dawon Ahn, \textbf{Sangjun Son}, and U Kang, \\
 %    RESEARCH EXPERIENCES
 %--------------------------------------------------------------------------------
 \begin{rSection}{RESEARCH EXPERIENCES}
-\href{https://datalab.snu.ac.kr/}{\textbf{Data Mining Laboratory}}, \textit{Seoul National University} \hfill Nov. 2019 - Present \\
+\href{https://datalab.snu.ac.kr/}{\textbf{Data Mining Laboratory}}, \textit{Seoul National University} \hfill Nov. 2019 - Feb. 2021 \\
 Research Internship (Advisor: Prof. U Kang)
 \vspace{-1mm}
 \begin{itemize}
@@ -89,7 +89,7 @@ Research Internship (Advisor: Prof. Chang-Gun Lee)
 \begin{rSection}{WORKING EXPERIENCES}
 {\bf Google Software Engineering Intern}, \textit{Google Korea LLC., Desktop Search Team} \hfill Jun. 2021 - Sep. 2021 \\ 
 Automatic I2F and Nesting config generation for hOSRP to diOSRP conversion \\
-Designed an internal development tool for efficient development in OSRP migration \\
+Designed an internal tool for efficient development in OSRP migration \\
 \end{rSection}
 
 %--------------------------------------------------------------------------------
@@ -205,7 +205,7 @@ Silver medal (the 3rd place)
 
 {\bf WD Partners}, \textit{Consulting Firm providing indoor ventilation solution} \hfill Jun. 2021 - Now\\
 Theoretically found conditions with the most optimal ventilation efficiency through \\
-CFD (Computerized Fluid Dynamics) analysis for pollutants like (e.g., fine dust and droplets containing viruses) \\
+CFD (Computerized Fluid Dynamics) analysis for pollutants (e.g., fine dust and droplets containing viruses) \\
 Built a prototype device using Coanda effect for real-world validation 
 
 {\bf Problem Solving in SNU}, \textit{Study group for preparing problem-solving interview} \hfill Jun. 2021 - Now \\
